# tinybase

./: .env.save  .gitignore  Cargo.toml  README.md
.fleet/: run.json
migrations/2022-12-21-202152_key_values/: down.sql  up.sql
migrations/2022-12-21-214619_add_index/: down.sql  up.sql
src/: actions.rs  auth_middleware.rs  main.rs  migrations.rs  models.rs  session.rs  ws_actor.rs
src/actors/: mod.rs  session.rs  ws_actor.rs
src/controllers/: key_controller.rs  mod.rs
src/data_access/: actions.rs  mod.rs  models.rs  schema.rs
static/: index.html
